[gd_scene load_steps=3 format=3 uid="uid://dnobguwjktclk"]

[ext_resource type="Script" path="res://Script/Interact/wind_current.gd" id="1_xdunk"]
[ext_resource type="PackedScene" uid="uid://dx4j1botx8pbb" path="res://Scenes/Effect/wind_current.tscn" id="2_2qj0y"]

[node name="WindCurrent" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_xdunk")
current_strength = 500.0
wind_direction = Vector2(0, -1)

[node name="WindCurrent" parent="." instance=ExtResource("2_2qj0y")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
